dynamix/force-app/main/default/objects/wk_exo__ExotelPlatformEvent__e/wk_exo__ExotelPlatformEvent__e.object-meta.xml
<CustomObject>
    <label>Exotel Platform Event</label>
    <pluralLabel>Exotel Platform Events</pluralLabel>
</CustomObject>