dynamix/force-app/main/default/objects/wk_exo__ExotelPlatformEvent__e/fields/wk_exo__AgentEmail__c.field-meta.xml
<CustomField>
    <fullName>wk_exo__AgentEmail__c</fullName>
    <label>Webkul:Exotel::Agent Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>