dynamix/force-app/main/default/objects/wk_exo__ExotelPlatformEvent__e/fields/wk_exo__call_sid__c.field-meta.xml
<CustomField>
    <fullName>wk_exo__call_sid__c</fullName>
    <label>Exotel: Call SID</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>