dynamix/force-app/main/default/objects/wk_exo__ExotelPlatformEvent__e/fields/wk_exo__CallFrom__c.field-meta.xml
<CustomField>
    <fullName>wk_exo__CallFrom__c</fullName>
    <label>Webkul:Exotel::CallFrom</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>