dynamix/force-app/main/default/objects/wk_exo__ExotelPlatformEvent__e/fields/wk_exo__DialWhomNumber__c.field-meta.xml
<CustomField>
    <fullName>wk_exo__DialWhomNumber__c</fullName>
    <label>Webkul:Exotel::DialWhomNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>