dynamix/force-app/main/default/objects/wk_exo__ExotelPlatformEvent__e/fields/wk_exo__direction__c.field-meta.xml
<CustomField>
    <fullName>wk_exo__direction__c</fullName>
    <label>Webkul:Exotel::direction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>