dynamix/force-app/main/default/objects/wk_exo__ExotelPlatformEvent__e/fields/wk_exo__params__c.field-meta.xml
<CustomField>
    <fullName>wk_exo__params__c</fullName>
    <label>Exotel: params</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>